Go to destination folder

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pymongo\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import docx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +31,16 @@
     "\n",
     "subject = 'High school statistics'\n",
     "# subject = 'Statistics and probability'\n",
-    "# subject = 'AP®︎/College Statistics'\n"
+    "# subject = 'AP®︎/College Statistics'\n",
+    "\n",
+    "# Target directory\n",
+    "root_dir = 'd:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics'\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +126,7 @@
        "4  Mean and median in data displays                   Median in a histogram  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,24 +137,10 @@
     "client = pymongo.MongoClient('mongodb://localhost:27017/')\n",
     "db = client['khan-academy']\n",
     "\n",
-    "# Lessons collection\n",
-    "# colLessons = db[\"lessons\"]\n",
-    "\n",
     "query = { 'subject': subject, 'lesson_type': { \"$in\": [ \"Article\", \"Video\" ] } }\n",
-    "# query = { 'subject': subject, 'lesson_type': { $in: [\"Video\", \"Article\"] } }\n",
-    "# { $in: [ \"ALGOL\", \"Lisp\" ]} \n",
-    "# columns = {'_id': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
     "columns = {'_id': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
     "\n",
-    "\n",
-    "# Ver\n",
-    "# https://www.mongodb.com/docs/manual/reference/method/db.collection.find/\n",
-    "\n",
-    "\n",
-    "\n",
     "lessons = db.lessons.find(query, columns)\n",
-    "\n",
-    "\n",
     "\n",
     "list_lessons = list(lessons)\n",
     "df = pd.DataFrame(list_lessons)\n",
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +159,99 @@
        "RangeIndex(start=0, stop=112, step=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\High school statistics'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create target directory\n",
+    "\n",
+    "os.chdir(root_dir)\n",
+    "parent_dir = os.getcwd()\n",
+    "\n",
+    "path = os.path.join(parent_dir, subject)\n",
+    "# print(path)\n",
+    "\n",
+    "# Create the directory\n",
+    "if not os.path.isdir(path):\n",
+    "   os.mkdir(path)\n",
+    "\n",
+    "os.chdir(path)\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create file test\n",
+    "\n",
+    "filename = 'teste.txt'\n",
+    "\n",
+    "with open(filename, 'w') as f:\n",
+    "    f.write('oscar')\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document = Document()\n",
+    "\n",
+    "document.add_heading('Document Title', 0)\n",
+    "\n",
+    "p = document.add_paragraph('A plain paragraph having some ')\n",
+    "p.add_run('bold').bold = True\n",
+    "p.add_run(' and some ')\n",
+    "p.add_run('italic.').italic = True\n",
+    "\n",
+    "document.add_heading('Heading, level 1', level=1)\n",
+    "document.add_paragraph('Intense quote', style='Intense Quote')\n",
+    "\n",
+    "document.add_paragraph(\n",
+    "    'first item in unordered list', style='List Bullet'\n",
+    ")\n",
+    "document.add_paragraph(\n",
+    "    'first item in ordered list', style='List Number'\n",
+    ")\n",
+    "\n",
+    "document.add_page_break()\n",
+    "\n",
+    "document.save('demo.docx')"
    ]
   },
   {
