Generate Word Document routine

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,15 @@
     "import pymongo\n",
     "import pandas as pd\n",
     "import re\n",
-    "import docx"
+    "import docx\n",
+    "from docx.shared import Pt\n",
+    "from docx.shared import RGBColor\n",
+    "from docx.oxml.ns import qn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +182,7 @@
        "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\High school statistics'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,35 +222,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "document = Document()\n",
+    "# https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
     "\n",
-    "document.add_heading('Document Title', 0)\n",
+    "document = docx.Document()\n",
     "\n",
-    "p = document.add_paragraph('A plain paragraph having some ')\n",
-    "p.add_run('bold').bold = True\n",
-    "p.add_run(' and some ')\n",
-    "p.add_run('italic.').italic = True\n",
     "\n",
-    "document.add_heading('Heading, level 1', level=1)\n",
-    "document.add_paragraph('Intense quote', style='Intense Quote')\n",
     "\n",
-    "document.add_paragraph(\n",
-    "    'first item in unordered list', style='List Bullet'\n",
-    ")\n",
-    "document.add_paragraph(\n",
-    "    'first item in ordered list', style='List Number'\n",
-    ")\n",
+    "# Styling the Document\n",
+    "style_normal = document.styles['Normal']\n",
+    "style_normal.font.name = 'Calibri Light'\n",
+    "style_normal.font.size = Pt(11)\n",
+    "\n",
+    "style_title = document.styles['Title']\n",
+    "style_title.font.name = 'Calibri Light'\n",
+    "style_title.font.size = Pt(28)\n",
+    "\n",
+    "\n",
+    "# dir(style_title.font)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style_title.font.bold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the Word File\n",
+    "\n",
+    "# https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
+    "\n",
+    "document = docx.Document()\n",
+    "\n",
+    "# Styling the Document\n",
+    "\n",
+    "# Normal\n",
+    "style_normal = document.styles['Normal']\n",
+    "style_normal.font.name = 'Calibri'\n",
+    "style_normal.font.size = Pt(11)\n",
+    "\n",
+    "# Title\n",
+    "style_title = document.styles['Title']\n",
+    "style_title.font.name = 'Calibri Light'\n",
+    "style_title.font.size = Pt(28)\n",
+    "style_title.font.color.rgb = RGBColor(0x00, 0x00, 0x00)\n",
+    "# https://stackoverflow.com/questions/60921603/how-do-i-change-heading-font-face-and-size-in-python-docx\n",
+    "rFonts = style_title.element.rPr.rFonts\n",
+    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "# Heading 1\n",
+    "style_heading1 = document.styles['Heading 1']\n",
+    "style_heading1.font.name = 'Calibri Light'\n",
+    "style_heading1.font.bold = None\n",
+    "style_heading1.font.size = Pt(16)\n",
+    "style_heading1.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
+    "rFonts = style_heading1.element.rPr.rFonts\n",
+    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "# Heading 2\n",
+    "style_heading2 = document.styles['Heading 2']\n",
+    "style_heading2.font.name = 'Calibri Light'\n",
+    "style_heading2.font.bold = None\n",
+    "style_heading2.font.size = Pt(13)\n",
+    "style_heading2.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
+    "rFonts = style_heading2.element.rPr.rFonts\n",
+    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "# Generate the document content\n",
+    "\n",
+    "document.add_heading('Unit 6 - Probability', 0)\n",
+    "\n",
+    "document.add_heading('Lesson 1: Venn diagrams and the addition rule', level=1)\n",
+    "document.add_paragraph('', style='Normal')\n",
+    "document.add_heading(\"\\tProbability with Venn diagrams\", level=2)\n",
+    "document.add_paragraph('\\t', style='Normal')\n",
+    "document.add_paragraph('\\t', style='Normal')\n",
+    "document.add_paragraph('\\t', style='Normal')\n",
+    "\n",
+    "\n",
     "\n",
     "document.add_page_break()\n",
     "\n",
