Generate word file

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subject</th>\n",
        "      <th>unit</th>\n",
        "      <th>group</th>\n",
        "      <th>lesson</th>\n",
@@ -76,35 +75,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>High school statistics</td>\n",
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Frequency tables and dot plots</td>\n",
        "      <td>Frequency tables &amp; dot plots</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>High school statistics</td>\n",
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Histograms</td>\n",
        "      <td>Creating a histogram</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>High school statistics</td>\n",
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Histograms</td>\n",
        "      <td>Interpreting a histogram</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>High school statistics</td>\n",
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Mean and median in data displays</td>\n",
        "      <td>Statistics intro: Mean, median, &amp; mode</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>High school statistics</td>\n",
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Mean and median in data displays</td>\n",
        "      <td>Median in a histogram</td>\n",
@@ -114,12 +108,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                  subject                                               unit  \\\n",
-       "0  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
-       "1  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
-       "2  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
-       "3  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
-       "4  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
+       "                                                unit  \\\n",
+       "0  Unit 1: Displaying a single quantitative variable   \n",
+       "1  Unit 1: Displaying a single quantitative variable   \n",
+       "2  Unit 1: Displaying a single quantitative variable   \n",
+       "3  Unit 1: Displaying a single quantitative variable   \n",
+       "4  Unit 1: Displaying a single quantitative variable   \n",
        "\n",
        "                              group                                  lesson  \n",
        "0    Frequency tables and dot plots            Frequency tables & dot plots  \n",
@@ -129,7 +123,7 @@
        "4  Mean and median in data displays                   Median in a histogram  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +135,7 @@
     "db = client['khan-academy']\n",
     "\n",
     "query = { 'subject': subject, 'lesson_type': { \"$in\": [ \"Article\", \"Video\" ] } }\n",
-    "columns = {'_id': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
+    "columns = {'_id': 0, 'subject': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
     "\n",
     "lessons = db.lessons.find(query, columns)\n",
     "\n",
@@ -173,16 +167,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare Word Document\n",
+    "\n",
+    "def prepare_document(unit):\n",
+    "\n",
+    "   # https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
+    "\n",
+    "   document = docx.Document()\n",
+    "\n",
+    "   # Styling the Document\n",
+    "\n",
+    "   # Normal\n",
+    "   style_normal = document.styles['Normal']\n",
+    "   style_normal.font.name = 'Calibri'\n",
+    "   style_normal.font.size = Pt(11)\n",
+    "\n",
+    "   # Title\n",
+    "   style_title = document.styles['Title']\n",
+    "   style_title.font.name = 'Calibri Light'\n",
+    "   style_title.font.size = Pt(28)\n",
+    "   style_title.font.color.rgb = RGBColor(0x00, 0x00, 0x00)\n",
+    "   # https://stackoverflow.com/questions/60921603/how-do-i-change-heading-font-face-and-size-in-python-docx\n",
+    "   rFonts = style_title.element.rPr.rFonts\n",
+    "   rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "   # Heading 1\n",
+    "   style_heading1 = document.styles['Heading 1']\n",
+    "   style_heading1.font.name = 'Calibri Light'\n",
+    "   style_heading1.font.bold = None\n",
+    "   style_heading1.font.size = Pt(16)\n",
+    "   style_heading1.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
+    "   rFonts = style_heading1.element.rPr.rFonts\n",
+    "   rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "   # Heading 2\n",
+    "   style_heading2 = document.styles['Heading 2']\n",
+    "   style_heading2.font.name = 'Calibri Light'\n",
+    "   style_heading2.font.bold = None\n",
+    "   style_heading2.font.size = Pt(13)\n",
+    "   style_heading2.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
+    "   rFonts = style_heading2.element.rPr.rFonts\n",
+    "   rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
+    "\n",
+    "   # Generate the document content\n",
+    "\n",
+    "   document.add_heading(unit, 0)\n",
+    "\n",
+    "   return document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Primeway\\Treinamento\\Data Science & AI\\Statistics\\High school statistics\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\High school statistics'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,157 +250,54 @@
     "parent_dir = os.getcwd()\n",
     "\n",
     "path = os.path.join(parent_dir, subject)\n",
-    "# print(path)\n",
+    "print(path)\n",
     "\n",
     "# Create the directory\n",
     "if not os.path.isdir(path):\n",
     "   os.mkdir(path)\n",
     "\n",
     "os.chdir(path)\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create file test\n",
-    "\n",
-    "filename = 'teste.txt'\n",
-    "\n",
-    "with open(filename, 'w') as f:\n",
-    "    f.write('oscar')\n",
-    "\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
-    "\n",
-    "document = docx.Document()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Styling the Document\n",
-    "style_normal = document.styles['Normal']\n",
-    "style_normal.font.name = 'Calibri Light'\n",
-    "style_normal.font.size = Pt(11)\n",
-    "\n",
-    "style_title = document.styles['Title']\n",
-    "style_title.font.name = 'Calibri Light'\n",
-    "style_title.font.size = Pt(28)\n",
-    "\n",
-    "\n",
-    "# dir(style_title.font)\n",
+    "os.getcwd()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "style_title.font.bold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate the Word File\n",
+    "# Interact through Dataframe and save doc file\n",
     "\n",
-    "# https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
+    "unit = ''\n",
     "\n",
-    "document = docx.Document()\n",
+    "for i in df.index:\n",
     "\n",
-    "# Styling the Document\n",
+    "    if df['unit'][i] != unit:\n",
+    "        # Sanitize filename and save document\n",
+    "        if unit != '':\n",
+    "            filename = re.sub(r':',\" -\", unit)\n",
+    "            filename = re.sub(r'[\\\\/*?\"<>|]',\"\", filename)\n",
+    "            # Check out if the file exists\n",
+    "            path = os.path.join(os.getcwd(), filename)\n",
+    "            if os.path.isfile(path):\n",
+    "                document.save(filename + '.docx')\n",
+    "        # Nem unit\n",
+    "        unit = df['unit'][i]\n",
+    "        document = prepare_document(re.sub(r':',\" -\", unit))\n",
+    "        group = ''\n",
     "\n",
-    "# Normal\n",
-    "style_normal = document.styles['Normal']\n",
-    "style_normal.font.name = 'Calibri'\n",
-    "style_normal.font.size = Pt(11)\n",
+    "    if df['group'][i] != group: \n",
+    "        if group != '':\n",
+    "            document.add_page_break()\n",
+    "        document.add_heading(df['group'][i], level=1)\n",
+    "        document.add_paragraph('', style='Normal') \n",
+    "        group = df['group'][i]\n",
     "\n",
-    "# Title\n",
-    "style_title = document.styles['Title']\n",
-    "style_title.font.name = 'Calibri Light'\n",
-    "style_title.font.size = Pt(28)\n",
-    "style_title.font.color.rgb = RGBColor(0x00, 0x00, 0x00)\n",
-    "# https://stackoverflow.com/questions/60921603/how-do-i-change-heading-font-face-and-size-in-python-docx\n",
-    "rFonts = style_title.element.rPr.rFonts\n",
-    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
-    "\n",
-    "# Heading 1\n",
-    "style_heading1 = document.styles['Heading 1']\n",
-    "style_heading1.font.name = 'Calibri Light'\n",
-    "style_heading1.font.bold = None\n",
-    "style_heading1.font.size = Pt(16)\n",
-    "style_heading1.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
-    "rFonts = style_heading1.element.rPr.rFonts\n",
-    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
-    "\n",
-    "# Heading 2\n",
-    "style_heading2 = document.styles['Heading 2']\n",
-    "style_heading2.font.name = 'Calibri Light'\n",
-    "style_heading2.font.bold = None\n",
-    "style_heading2.font.size = Pt(13)\n",
-    "style_heading2.font.color.rgb = RGBColor(0x2F, 0x54, 0x96)\n",
-    "rFonts = style_heading2.element.rPr.rFonts\n",
-    "rFonts.set(qn(\"w:asciiTheme\"), \"Calibri Light\")\n",
-    "\n",
-    "# Generate the document content\n",
-    "\n",
-    "document.add_heading('Unit 6 - Probability', 0)\n",
-    "\n",
-    "document.add_heading('Lesson 1: Venn diagrams and the addition rule', level=1)\n",
-    "document.add_paragraph('', style='Normal')\n",
-    "document.add_heading(\"\\tProbability with Venn diagrams\", level=2)\n",
-    "document.add_paragraph('\\t', style='Normal')\n",
-    "document.add_paragraph('\\t', style='Normal')\n",
-    "document.add_paragraph('\\t', style='Normal')\n",
-    "\n",
-    "\n",
-    "\n",
-    "document.add_page_break()\n",
-    "\n",
-    "document.save('demo.docx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://towardsdatascience.com/10-python-pandas-tricks-to-make-data-analysis-more-enjoyable-cb8f55af8c30\n",
-    "# https://pandas.pydata.org/docs/user_guide/style.html\n",
-    "\n",
-    "# df.head(20).style.set_table_styles(\n",
-    "# [{'selector': 'th',\n",
-    "#   'props': [('background', '#7CAE00'), \n",
-    "#             ('color', 'white'),\n",
-    "#             ('font-family', 'verdana')]},\n",
-    " \n",
-    "#  {'selector': 'td',\n",
-    "#   'props': [('font-family', 'verdana')]},\n",
-    "\n",
-    "#  {'selector': 'tr:nth-of-type(odd)',\n",
-    "#   'props': [('background', '#DCDCDC')]}, \n",
-    " \n",
-    "#  {'selector': 'tr:nth-of-type(even)',\n",
-    "#   'props': [('background', 'white')]},\n",
-    " \n",
-    "# ]\n",
-    "# ).hide(axis=\"index\")"
+    "    document.add_heading(\"\\t\" + df['lesson'][i], level=2)\n",
+    "    document.add_paragraph('\\t', style='Normal')\n",
+    "    document.add_paragraph('\\t', style='Normal')\n",
+    "    document.add_paragraph('\\t', style='Normal')\n"
    ]
   }
  ],
