Word Documents generator is finished

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Script Variables\n",
     "\n",
-    "subject = 'High school statistics'\n",
-    "# subject = 'Statistics and probability'\n",
+    "# subject = 'High school statistics'\n",
+    "subject = 'Statistics and probability'\n",
     "# subject = 'AP®︎/College Statistics'\n",
     "\n",
     "# Target directory\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -74,56 +74,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
-       "      <td>Frequency tables and dot plots</td>\n",
-       "      <td>Frequency tables &amp; dot plots</td>\n",
+       "      <th>393</th>\n",
+       "      <td>Unit 15: Advanced regression (inference and tr...</td>\n",
+       "      <td>Nonlinear regression</td>\n",
+       "      <td>Transforming nonlinear data</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
-       "      <td>Histograms</td>\n",
-       "      <td>Creating a histogram</td>\n",
+       "      <th>394</th>\n",
+       "      <td>Unit 15: Advanced regression (inference and tr...</td>\n",
+       "      <td>Nonlinear regression</td>\n",
+       "      <td>Worked example of linear regression using tran...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
-       "      <td>Histograms</td>\n",
-       "      <td>Interpreting a histogram</td>\n",
+       "      <th>395</th>\n",
+       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
+       "      <td>Analysis of variance (ANOVA)</td>\n",
+       "      <td>ANOVA 1: Calculating SST (total sum of squares)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
-       "      <td>Mean and median in data displays</td>\n",
-       "      <td>Statistics intro: Mean, median, &amp; mode</td>\n",
+       "      <th>396</th>\n",
+       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
+       "      <td>Analysis of variance (ANOVA)</td>\n",
+       "      <td>ANOVA 2: Calculating SSW and SSB (total sum of...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
-       "      <td>Mean and median in data displays</td>\n",
-       "      <td>Median in a histogram</td>\n",
+       "      <th>397</th>\n",
+       "      <td>Unit 16: Analysis of variance (ANOVA)</td>\n",
+       "      <td>Analysis of variance (ANOVA)</td>\n",
+       "      <td>ANOVA 3: Hypothesis test with F-statistic</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                unit  \\\n",
-       "0  Unit 1: Displaying a single quantitative variable   \n",
-       "1  Unit 1: Displaying a single quantitative variable   \n",
-       "2  Unit 1: Displaying a single quantitative variable   \n",
-       "3  Unit 1: Displaying a single quantitative variable   \n",
-       "4  Unit 1: Displaying a single quantitative variable   \n",
+       "                                                  unit  \\\n",
+       "393  Unit 15: Advanced regression (inference and tr...   \n",
+       "394  Unit 15: Advanced regression (inference and tr...   \n",
+       "395              Unit 16: Analysis of variance (ANOVA)   \n",
+       "396              Unit 16: Analysis of variance (ANOVA)   \n",
+       "397              Unit 16: Analysis of variance (ANOVA)   \n",
        "\n",
-       "                              group                                  lesson  \n",
-       "0    Frequency tables and dot plots            Frequency tables & dot plots  \n",
-       "1                        Histograms                    Creating a histogram  \n",
-       "2                        Histograms                Interpreting a histogram  \n",
-       "3  Mean and median in data displays  Statistics intro: Mean, median, & mode  \n",
-       "4  Mean and median in data displays                   Median in a histogram  "
+       "                            group  \\\n",
+       "393          Nonlinear regression   \n",
+       "394          Nonlinear regression   \n",
+       "395  Analysis of variance (ANOVA)   \n",
+       "396  Analysis of variance (ANOVA)   \n",
+       "397  Analysis of variance (ANOVA)   \n",
+       "\n",
+       "                                                lesson  \n",
+       "393                        Transforming nonlinear data  \n",
+       "394  Worked example of linear regression using tran...  \n",
+       "395    ANOVA 1: Calculating SST (total sum of squares)  \n",
+       "396  ANOVA 2: Calculating SSW and SSB (total sum of...  \n",
+       "397          ANOVA 3: Hypothesis test with F-statistic  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,37 +149,36 @@
     "list_lessons = list(lessons)\n",
     "df = pd.DataFrame(list_lessons)\n",
     "\n",
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RangeIndex(start=0, stop=112, step=1)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1194\n"
+     ]
     }
    ],
    "source": [
-    "df.index"
+    "df.index\n",
+    "print(df.size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare Word Document\n",
+    "# Helper Functions\n",
     "\n",
+    "# Prepare Word Document\n",
     "def prepare_document(unit):\n",
     "\n",
     "   # https://python-docx.readthedocs.io/en/latest/user/styles-using.html\n",
@@ -217,34 +223,48 @@
     "\n",
     "   document.add_heading(unit, 0)\n",
     "\n",
-    "   return document"
+    "   return document\n",
+    "\n",
+    "# Sanitize filename and save document\n",
+    "def save_document(document, unit):\n",
+    "   filename = re.sub(r':',\" -\", unit)\n",
+    "   filename = re.sub(r'[\\\\/*?\"<>|]',\"\", filename)\n",
+    "   filename = filename + '.docx'\n",
+    "\n",
+    "   # Check if the file exists\n",
+    "   path = os.path.join(os.getcwd(), filename)\n",
+    "   # print(path)\n",
+    "   if not os.path.isfile(path):\n",
+    "      document.save(filename)\n",
+    "\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\Primeway\\Treinamento\\Data Science & AI\\Statistics\\High school statistics\n"
+      "d:\\Primeway\\Treinamento\\Data Science & AI\\Statistics\\Statistics and probability\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\High school statistics'"
+       "'d:\\\\Primeway\\\\Treinamento\\\\Data Science & AI\\\\Statistics\\\\Statistics and probability'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create target directory\n",
+    "# Create and/or move to target directory\n",
     "\n",
     "os.chdir(root_dir)\n",
     "parent_dir = os.getcwd()\n",
@@ -263,30 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Interact through Dataframe and save doc file\n",
     "\n",
-    "unit = ''\n",
+    "df_length = len(df.index)\n",
     "\n",
     "for i in df.index:\n",
     "\n",
-    "    if df['unit'][i] != unit:\n",
-    "        # Sanitize filename and save document\n",
-    "        if unit != '':\n",
-    "            filename = re.sub(r':',\" -\", unit)\n",
-    "            filename = re.sub(r'[\\\\/*?\"<>|]',\"\", filename)\n",
-    "            # Check out if the file exists\n",
-    "            path = os.path.join(os.getcwd(), filename)\n",
-    "            if os.path.isfile(path):\n",
-    "                document.save(filename + '.docx')\n",
-    "        # Nem unit\n",
+    "    # Nem unit\n",
+    "    if i == 0 or df['unit'][i] != unit:          \n",
     "        unit = df['unit'][i]\n",
     "        document = prepare_document(re.sub(r':',\" -\", unit))\n",
     "        group = ''\n",
     "\n",
+    "    # New Group\n",
     "    if df['group'][i] != group: \n",
     "        if group != '':\n",
     "            document.add_page_break()\n",
@@ -297,7 +310,10 @@
     "    document.add_heading(\"\\t\" + df['lesson'][i], level=2)\n",
     "    document.add_paragraph('\\t', style='Normal')\n",
     "    document.add_paragraph('\\t', style='Normal')\n",
-    "    document.add_paragraph('\\t', style='Normal')\n"
+    "    document.add_paragraph('\\t', style='Normal')\n",
+    "\n",
+    "    if (i == df_length-1) or (df['unit'][i+1] != unit):\n",
+    "        save_document(document, unit)\n"
    ]
   }
  ],
